# pgRouting-prototypes

./: CMakeLists.txt  README.md  run_tests.cmake
.github/workflows/: build.yml  ci.yml
articulation_points/: articulation_points_prototype.cpp  test_articulation_points.cpp
kcore/: kcore_prototype.cpp
lengauer_tarjan/: lengauer_tarjan_prototype.cpp  test_lengauer_tarjan.cpp
max_weighted_match/: max_weighted_match_prototype.cpp  test_max_weighted_match.cpp
planar_faces/: planar_faces_prototype.cpp  test_planar_faces.cpp
stoer_wagner/: stoer_wagner_prototype.cpp  test_stoer_wagner.cpp
